# readlist-assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 239ce4354440_rename_podcast_episode_to_episode_id.py  634e2df60ec1_add_processed_episodes_table.py  6b81df32177d_remove_unique_constraint_on_goodreads_.py  8e4768e52334_add_goodreads_fields.py
backend/app/: crud.py  database.py  filters.py  goodreads.py  main.py  models.py  scraper.py  spotify.py
backend/scripts/: README.md  audit_db.py  check_db.py  check_processed_episodes.py  find_episode_offset.py  find_episodes_by_title.py  fix_book_counts.py  populate_db.py  process_specific_episodes.py  refresh_db.sh
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  types.ts
frontend/src/components/: BookDetail.tsx  BookList.tsx  BookTable.tsx  FilterBar.tsx  Navbar.tsx
